--- a/styles/style.css
+++ b/styles/style.css
@@ -171,7 +171,7 @@
     margin-top: 0px;
     width: 4.5rem;
     height: 4.5rem;
-    background-image: url('/assets/logo.png');
+    background-image: url('./assets/logo.png');
     background-repeat: no-repeat;
     background-position: center;  
     background-color: var(--cor-quaternaria);  
